cleerk authentication done

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 VITE_IK_URL_ENDPOINT = https://ik.imagekit.io/a53vvrxah/
 VITE_IK_PUBLIC_KEY = public_XJ58t0Ad6CJKpBzqd8wuWDUMwHE=
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_cG9zc2libGUtc3RhcmxpbmctNzIuY2xlcmsuYWNjb3VudHMuZGV2JA
